--- a/views/space.ejs
+++ b/views/space.ejs
@@ -23,44 +23,26 @@
 
     <script src="/main.js" ></script>
     <script src="/space.js" ></script>
-    <script src="https://cdn.jsdelivr.net/npm/postprocessing@latest/build/postprocessing.min.js" ></script>
     <link href="/main.css" rel="stylesheet" />
 
     <title>DWXR</title>
 </head>
 <body  style='margin : 0px; overflow: hidden;'>
 
+<script src="/before-scene.js" ></script>
+
 <div class="scene-container fixed-top">
-    <a-scene id="scene" cursor="rayOrigin: mouse" renderer="antialias: false"  embedded>
+    <a-scene id="scene" cursor="rayOrigin: mouse" renderer="antialias: false" embedded>
         <a-assets id="assets">
         </a-assets>
-
-        <a-entity>
-            <a-box id="box" position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-            <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-            <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-        </a-entity>
-
-        <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-        <a-sky color="#ECECEC"></a-sky>
 
         <a-entity id= "light-directional" light="type: directional; color: #EEE; intensity: 0.5" position="-1 1 0"></a-entity>
         <a-entity id="light-ambient" light="type: ambient; color: #CCC"></a-entity>
 
-        <a-entity id="camera" camera></a-entity>
+        <a-camera></a-camera>
 
     </a-scene>
 
-    <div class="a-enter-ar" >
-        <button class="a-enter-ar-button" title="Enter AR mode with a camera"></button>
-    </div>
-
-    <script>
-        jq('.a-enter-ar-button').on('click',function(){
-            let arUrl = window.location.origin + '/space/ar/' + getSpaceID();
-            window.location.href = arUrl;
-        })
-    </script>
 </div>
 
 
@@ -127,8 +109,6 @@
 
 
 
-
-
 <!--가장 아래에 Modal for tell -->
 <div class="modal fade" id="tell" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -141,491 +121,8 @@
     </div>
 </div>
 
-<script>
-    // navBar
-    ;(() => {
-        jq('.navbar-brand').attr('href', location.origin);
 
-        jq('#title').on('click', function(){
-            let input = document.createElement('input');
-            input.setAttribute('value', this.textContent);
-            this.replaceChild(input, this.firstChild);
-            this.appendChild( input );
-            input.focus();
-            input.addEventListener('keyup', function(event){
-                if(event.key === 'Enter' ){
-                    G.space.get('title').put(this.value);
-                    this.remove();
-                }
-            })
-        });
-        jq('#sign-btn').on('click', (e) => {
-            let m = jq('#modal-sign');
-            m.modal('show')
-        });
-
-        jq('#up').on('click', function () {
-            let form = check();
-            if (!form) {
-                return
-            }
-            S.user.create(form.alias, form.pass, async (ack) => {
-                if (ack.err) {
-                    return S.tell(ack.err)
-                }
-                check.up = true;
-                await S.user.auth(form.alias, form.pass, logined);
-            });
-        });
-
-        jq('#in').on('click', async function () {
-            let form = check();
-            if (!form) {
-                return
-            }
-            await S.user.auth(form.alias, form.pass, logined);
-        });
-
-        let check = () => {
-            let form = {alias: (jq('#alias').val() || '').toLowerCase(), pass: jq("#pass").val() || ''};
-            if (6 > form.alias.length) {
-                S.tell("Your username needs to be longer than 5 letters.");
-                return;
-            }
-            if (9 > form.pass.length) {
-                S.tell("Your passphrase needs to be longer than 9 letters.");
-                return;
-            }
-            return form;
-        }
-
-        let logined = (ack) => {
-            if (ack.err) {
-                return S.tell(ack.err)
-            }
-            // console.log(ack);
-            jq('#modal-sign').modal('hide');
-            let e = jq('#sign');
-            let alias = S.user.is.alias;
-            S.user.recall({sessionStorage: true}); // 세션에 로그인 정보 저장
-            location.reload();
-            S.tell('welcome, ' + alias + '!');
-        }
-    })();
-
-    let G = {};
-    let sceneEl = document.querySelector('a-scene');
-    let assetsEl = document.createElement('a-assets');
-
-    let getSpaceID = function() {
-        // return path.basename(location.pathname);
-        return location.pathname.substring('/space/'.length);
-    }
-
-    // callbacks of gun
-    let createEl = function (data, key) {
-        let el;
-        // if there is no dom element, create it.
-        if (document.querySelector('#' + data.id) === null) {
-            if(data.tagName === 'a-marker'){
-                el = document.createElement('a-entity');
-            }else{
-                el = document.createElement(data.tagName);
-            }
-            if(data.tagName === 'a-asset-item'){
-                el.setAttribute('src','default');
-            }
-            el.setAttribute('id', data.id);
-            this.get('attributes').once().map().once((data, key) => {
-                el.setAttribute(key, data);
-            });
-
-            if (data.parent === undefined || data.parent === null || data.parent === '' || data.parent === 'scene') {
-                sceneEl.appendChild(el);
-            } else {
-                let parentEl = document.querySelector('#' + data.parent);
-                parentEl.appendChild(el);
-            }
-        }
-    }
-    let displayCurrentUser = function(data, key){
-        if(data.alias === undefined) return;
-        let el = document.querySelector('#'+'nav-' + data.alias);
-        if(el === null) {
-            el = document.createElement('i');
-            el.setAttribute('id', 'nav-' + data.alias);
-            el.classList.add('fas');
-            el.setAttribute('data-toggle', 'tooltip')
-            el.setAttribute('data-placement','bottom')
-            el.setAttribute('title',data.alias);
-            this.get(getSpaceID()).once(function(data){
-                el.classList.add('fa-' + data.animal);
-                el.classList.add('text-' + data.color);
-            });
-            document.querySelector('#nav-current').appendChild(el);
-            jq('#nav-'+data.alias).tooltip();
-        }
-    };
-
-    let animalCurrentUser = function(data, key){
-        let animal = data;
-        if(animal === false) return;
-        this.back(2).once(function(data, key){
-            if(data.alias === undefined) return;
-            let el = document.querySelector('#'+'nav-' + data.alias);
-            if(el === null){
-                this.once(displayCurrentUser);
-            }else{
-                el.classList.add('fa-' + animal);
-            }
-        })
-    }
-
-    let colorCurrentUser = function(data, key){
-        let color = data;
-        if(color === false) return;
-        this.back(2).once(function(data, key){
-            if(data.alias === undefined) return;
-            let el = document.querySelector('#'+'nav-' + data.alias);
-            if(el === null){
-                this.once(displayCurrentUser);
-            }else{
-                el.classList.add('text-' + color);
-            }
-        });
-    }
-    // Initialize space
-    function testJsonToGun(){
-
-        let obj = {
-            id: 'gift2',
-            tagName: 'a-box',
-            parent: 'scene',
-            attributes:{
-                position: {x:1, y:2, z:-3},
-                rotation: {x:0, y:45, z:45},
-                scale: {x:1, y:1, z:1},
-                color: 'blue',
-                'transform-controls' : { activated: false },
-            }
-        };
-
-        // <a-box id='gift' position="x:0; y:0; z:0" rotation="x:0; y:45; z:45" scale="x:1; y:1; z:1" color=red" transform-controls={activated: false}>
-
-        G.objects.get( obj.id ).put(obj);
-        G.scene.get('children').set( G.objects.get( obj.id ) );
-    }
-
-    let I = function(){
-
-            let initPath = function(){
-                G.space = S.app.get('spaces').get( getSpaceID() );
-                G.scene = G.space.get('scene');
-                G.assets = G.space.get('assets');
-                G.objects = G.space.get('objects');
-            }
-
-            let joinSpace = function(){
-                console.log(S.myAlias + ' wanna join here!')
-
-                G.space.get('participants').set( S.myData );
-                G.space.get('participants').once().map().once( function(data, key){
-                    if(key === '~' + S.myPair.pub){
-                        let animals = ['paw', 'hippo', 'dog', 'spider', 'kiwi-bird',
-                            'frog', 'fish', 'dragon', 'dove', 'cat'];
-                        let colors = ['blue', 'indigo', 'purple', 'pink', 'red',
-                            'orange', 'yellow', 'green', 'teal', 'cyan'];
-                        this.get(getSpaceID()).put({
-                            'animal': animals[Math.floor(Math.random() * animals.length)],
-                            'color': colors[Math.floor(Math.random() * colors.length)],
-                        });
-                        this.get(getSpaceID()).get('now').put(true);
-                        G.me = this;
-                    }
-                });
-            }
-
-            let initCurrentParticipants = function () {
-                G.space.get('participants').once().map().get(getSpaceID()).get('now').once(function(data){
-                    if( data ){ // true
-                        this.back(2).once(displayCurrentUser);
-                    } else { // exit
-                        this.back(2).once(function(data, key){
-                            if(data.alias === undefined) return;
-                            let el = document.querySelector('#'+'nav-' + data.alias);
-                            if(el !== null) {
-                                this.get(getSpaceID()).get('now').once(function(data){
-                                    if(data) return;
-                                    el.remove();
-                                })
-                            }
-                        })
-                    }
-                });            }
-
-            let initTitle = function(){
-                let t = jq('#title');
-                G.space.once(function(data, key){
-                    t.text(data.title);
-                })
-            }
-
-            let initAssets= function(){
-                G.assets.map().once( createEl );
-            }
-
-            let initObjects = function(){
-                G.scene.get('children').once().map().once( initChildren );
-            }
-
-            // recursive
-            let initChildren = function(data, key){
-                this.once( createEl );
-                if(data.children !== undefined){
-                    this.get('children').once().map().once( initChildren )
-                }
-            };
-
-            initPath();
-            joinSpace();
-            initCurrentParticipants();
-            initTitle();
-            initAssets();
-            initObjects();
-            subscribe();
-        }
-
-
-    let subscribe = function(){
-        G.space.get('title').on( function(data){
-            jq('#title').text(data);
-        })
-
-        G.space.get('participants').map().get(getSpaceID()).get('now').on(function(data){
-            if( data ){ // true
-                this.back(2).once(displayCurrentUser);
-            } else { // exit
-                this.back(2).once(function(data, key){
-                    if(data.alias === undefined) return;
-                    let el = document.querySelector('#'+'nav-' + data.alias);
-                    if(el !== null) {
-                        this.get(getSpaceID()).get('now').once(function(data){
-                            if(data) return;
-                            el.remove();
-                        })
-                    }
-                })
-            }
-        });
-        G.space.get('participants').map().get(getSpaceID()).get('animal').on( animalCurrentUser );
-        G.space.get('participants').map().get(getSpaceID()).get('color').on( colorCurrentUser );
-
-        let syncPosition = function ( data, key ){
-            let el = document.querySelector('#'+key);
-            if(el){
-                let object = el.object3D;
-                if( object !== undefined ) {
-                    this.get('attributes').get('position').once(function (data) {
-                        // console.log(data);
-                        if(data !== undefined){
-                            object.position.copy(data);
-                        }
-                    });
-                }
-            }
-        }
-
-        G.objects.map().get('attributes').get('position').on(function(data, key){
-            this.back(2).once( syncPosition )
-        });
-
-    };
-
-    // when user leaves this space, remove the user in participants list
-    ;(()=>{
-        document.addEventListener('sslogin', I)
-        S.spaceoff = new Event('spaceoff');
-        window.addEventListener('spaceoff', function(){
-            G.me.get(getSpaceID()).get('now').put(false);
-            G.me.get(getSpaceID()).get('animal').put(false);
-            G.me.get(getSpaceID()).get('color').put(false);
-
-        })
-        window.onbeforeunload = function(e){
-            window.dispatchEvent(S.spaceoff);
-        }
-    })();
-
-</script>
-
-
-<script>
-    const PP = POSTPROCESSING;
-
-    const postprocessingSystem = {
-
-        assets: null,
-        composer: null,
-        originalRenderMethod: null,
-
-        /**
-         * Sets the preloaded scene assets.
-         *
-         * @param {Map} assets - A collection of scene assets.
-         * @return {Object} This system.
-         */
-
-        setAssets(assets) {
-
-            this.assets = assets;
-            return this;
-
-        },
-
-        /**
-         * Initializes this system.
-         */
-
-        init() {
-
-            const sceneEl = this.sceneEl;
-
-            const scene = sceneEl.object3D;
-            const renderer = sceneEl.renderer;
-            const render = renderer.render;
-            const camera = sceneEl.camera;
-
-            const assets = this.assets;
-            const clock = new THREE.Clock();
-            const composer = new PP.EffectComposer(renderer);
-
-            this.composer = composer;
-            this.originalRenderMethod = render;
-
-            const smaaEffect = new PP.SMAAEffect(assets.get("smaa-search"), assets.get("smaa-area"));
-
-            const outlineEffect = new PP.OutlineEffect(scene, camera, {
-                blendFunction: PP.BlendFunction.ALPHA,
-                edgeStrength: 25,
-                pulseSpeed: 0.0,
-                resolutionScale: 0.7,
-                visibleEdgeColor: 0x000000,
-                hiddenEdgeColor: 0x22090a,
-                blur: true,
-                xRay: true
-            });
-
-            // noiseEffect.blendMode.opacity.value = 0.25;
-            // sepiaEffect.blendMode.opacity.value = 0.3;
-
-            const renderPass = new PP.RenderPass(scene, camera);
-            const effectPass = new PP.EffectPass(camera, outlineEffect);
-            const smaaPass = new PP.EffectPass(camera, smaaEffect);
-
-            smaaPass.renderToScreen = true;
-
-            composer.addPass(renderPass);
-            composer.addPass(effectPass);
-            composer.addPass(smaaPass);
-
-            const box = document.querySelector('#box').object3D;
-            outlineEffect.setSelection(box.children);
-
-            // Hijack the render method.
-            let calledByComposer = false;
-
-            renderer.render = function() {
-
-                if(calledByComposer) {
-
-                    render.apply(renderer, arguments);
-
-                } else {
-
-                    calledByComposer = true;
-                    composer.render(clock.getDelta());
-                    calledByComposer = false;
-
-                }
-
-            };
-
-        },
-
-        /**
-         * Clean up when the system gets removed.
-         */
-
-        remove() {
-
-            this.composer.renderer.render = this.originalRenderMethod;
-            this.composer.dispose();
-
-        }
-
-    };
-
-    /**
-     * Loads scene assets.
-     *
-     * @return {Promise} A promise that will be fulfilled as soon as all assets have been loaded.
-     */
-
-    function load() {
-
-        const assets = new Map();
-        const loadingManager = new THREE.LoadingManager();
-
-        return new Promise((resolve, reject) => {
-
-            let image;
-
-            loadingManager.onError = reject;
-            loadingManager.onProgress = (item, loaded, total) => {
-
-                if(loaded === total) {
-
-                    resolve(assets);
-
-                }
-
-            };
-
-            // Load the SMAA images.
-            image = new Image();
-            image.addEventListener("load", function() {
-
-                assets.set("smaa-search", this);
-                loadingManager.itemEnd("smaa-search");
-
-            });
-
-            loadingManager.itemStart("smaa-search");
-            image.src = PP.SMAAEffect.searchImageDataURL;
-
-            image = new Image();
-            image.addEventListener("load", function() {
-
-                assets.set("smaa-area", this);
-                loadingManager.itemEnd("smaa-area");
-
-            });
-
-            loadingManager.itemStart("smaa-area");
-            image.src = PP.SMAAEffect.areaImageDataURL;
-
-        });
-
-    }
-
-    // TODO create trigger after load the others
-    // load().then((assets) => {
-
-        // AFRAME.registerSystem("postprocessing", postprocessingSystem.setAssets(assets));
-
-    // }).catch(console.error);
-
-</script>
+<script src="/after-scene.js" ></script>
 
 </body>
 </html>
