Set attributes to trun postprocessing off

--- a/views/ar.ejs
+++ b/views/ar.ejs
@@ -30,7 +30,7 @@
 <body style='margin : 0px; overflow: hidden;'>
 
 <div class="scene-container fixed-top">
-    <a-scene id="scene" cursor="rayOrigin: mouse" embedded arjs='sourceType: webcam;' vr-mode-ui="enabled: false">
+    <a-scene id="scene" cursor="rayOrigin: mouse" embedded arjs='sourceType: webcam;' vr-mode-ui="enabled: false" postprocessing="false">
         <a-assets id="assets">
         </a-assets>
 
