--- a/views/space.ejs
+++ b/views/space.ejs
@@ -31,18 +31,9 @@
 <body  style='margin : 0px; overflow: hidden;'>
 
 <div class="scene-container fixed-top">
-    <a-scene id="scene" cursor="rayOrigin: mouse" renderer="antialias: false"  embedded>
+    <a-scene id="scene" cursor="rayOrigin: mouse" renderer="antialias: false"  postprocessing="false" embedded>
         <a-assets id="assets">
         </a-assets>
-
-        <a-entity>
-            <a-box id="box" position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-            <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-            <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-        </a-entity>
-
-        <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-        <a-sky color="#ECECEC"></a-sky>
 
         <a-entity id= "light-directional" light="type: directional; color: #EEE; intensity: 0.5" position="-1 1 0"></a-entity>
         <a-entity id="light-ambient" light="type: ambient; color: #CCC"></a-entity>
