Change fontawesome importing

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,7 @@
         <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
         <script src="/main.js" ></script>
+        <link href="/all.css" rel="stylesheet" />
         <link href="/main.css" rel="stylesheet" />
         <title><%= title %></title>
     </head>
