--- a/views/space.ejs
+++ b/views/space.ejs
@@ -20,7 +20,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-
+    <script src="https://kit.fontawesome.com/971af83d00.js"></script>
     <script src="/main.js" ></script>
     <script src="/space.js" ></script>
     <link href="/main.css" rel="stylesheet" />
