--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -52,7 +52,8 @@ $theme-colors: (
 .create-random {
   z-index: 9999;
   position: absolute;
-  bottom: 5px;
+  bottom: 15px;
   left: 50%;
+  transform: translateX(-50%)
 
 }
