make login ui unvisible

--- a/views/space.ejs
+++ b/views/space.ejs
@@ -63,17 +63,17 @@
         </li>
     </ul>
 
-    <div id="nav-current" class="col-auto">
+<!--    <div id="nav-current" class="col-auto">-->
 
-    </div>
+<!--    </div>-->
 
-    <div id = 'nav-user'>
-        <div id="sign" class="my-2 my-lg-0">
-            <button id="sign-btn" class="btn btn-outline-primary my-2 my-sm-0">
-                <i class="fas fa-user-circle"></i> Sign In
-            </button>
-        </div>
-    </div>
+<!--    <div id = 'nav-user'>-->
+<!--        <div id="sign" class="my-2 my-lg-0">-->
+<!--            <button id="sign-btn" class="btn btn-outline-primary my-2 my-sm-0">-->
+<!--                <i class="fas fa-user-circle"></i> Sign In-->
+<!--            </button>-->
+<!--        </div>-->
+<!--    </div>-->
 
 </nav>
 
