--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,5 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding:400,700&display=swap&subset=korean');
-$font-family-base: 'Nanum Gothic Coding', monospace;
+//@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding:400,700&display=swap&subset=korean');
+//$font-family-base: 'Nanum Gothic Coding', monospace;
+
+@import url("//cdn.jsdelivr.net/gh/wan2land/d2coding/d2coding-full.css");
+$font-family-base: 'D2Coding', monospace;
 
 $theme-colors: (
   "primary": #f15949,
@@ -48,3 +51,14 @@ $theme-colors: (
 .a-enter-ar-button:hover {
   background-color: #666;
 }
+
+
+.complete-task {
+  z-index: 9999;
+  position: absolute;
+  bottom: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+
