--- a/views/test-speed.ejs
+++ b/views/test-speed.ejs
@@ -220,7 +220,7 @@
 <div>
     <img  id='logo' src="/images/W-1100x1100.png" width="200" height="200" class="d-inline-block align-top" alt="">
 </div>
-<h1>Hello, <%=name%>!</h1>
+<h1>Hello! <%= name %></h1>
 <p> ₍₍(ว˙∇˙)ง⁾⁾  I'm checking your speed   ₍₍(ง˙∇˙)ว⁾⁾ </p>
 <div id="testWrapper">
     <div id="startStopBtn" onclick="startStop()"></div>
