Fix favicon and UserConroller for custom name and update speed information

--- a/views/test-login.ejs
+++ b/views/test-login.ejs
@@ -4,6 +4,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+
+    <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
+
     <script src="/test-survey.js" ></script>
     <link href="/main.css" rel="stylesheet" />
 
@@ -33,12 +53,12 @@
     <h1>Hello, there!</h1>
     <p> 👇 Set your information 👇 </p>
 
-    <h2>Survey</h2>
+    <h2>Setting</h2>
     <form action="/test/setting" method="post">
         <div class="form-row">
             <div class="col-auto form-group">
                 <label for="name">Name</label>
-                <input type="text" name="Name" class="form-control" id="name">
+                <input type="text" name="name" class="form-control" id="name">
             </div>
 
         </div>
@@ -86,84 +106,6 @@
 
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-
-<!--    <div class="input-group justify-content-center">-->
-<!--        <div class="input-group-prepend col-auto">-->
-<!--            <button class="btn btn-outline-secondary" type="button" id="button-addon1">Button</button>-->
-<!--        </div>-->
-<!--        <input type="text" class="form-control col-auto" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">-->
-<!--    </div>-->
-
-<!--    <div class="input-group mb-3">-->
-<!--        <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">-->
-<!--        <div class="input-group-append">-->
-<!--            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>-->
-<!--        </div>-->
-<!--    </div>-->
-
-<!--    <div class="input-group mb-3">-->
-<!--        <div class="input-group-prepend" id="button-addon3">-->
-<!--            <button class="btn btn-outline-secondary" type="button">Button</button>-->
-<!--            <button class="btn btn-outline-secondary" type="button">Button</button>-->
-<!--        </div>-->
-<!--        <input type="text" class="form-control" placeholder="" aria-label="Example text with two button addons" aria-describedby="button-addon3">-->
-<!--    </div>-->
-
-<!--    <div class="input-group">-->
-<!--        <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username with two button addons" aria-describedby="button-addon4">-->
-<!--        <div class="input-group-append" id="button-addon4">-->
-<!--            <button class="btn btn-outline-secondary" type="button">Button</button>-->
-<!--            <button class="btn btn-outline-secondary" type="button">Button</button>-->
-<!--        </div>-->
-<!--    </div>-->
-
-<!--    <div class="btn-toolbar mb-3" role="toolbar" aria-label="Toolbar with button groups">-->
-<!--        <div class="btn-group mr-2" role="group" aria-label="First group">-->
-<!--            <button type="button" class="btn btn-secondary">1</button>-->
-<!--            <button type="button" class="btn btn-secondary">2</button>-->
-<!--            <button type="button" class="btn btn-secondary">3</button>-->
-<!--            <button type="button" class="btn btn-secondary">4</button>-->
-<!--        </div>-->
-<!--        <div class="input-group">-->
-<!--            <div class="input-group-prepend">-->
-<!--                <div class="input-group-text" id="btnGroupAddon">@</div>-->
-<!--            </div>-->
-<!--            <input type="text" class="form-control" placeholder="Input group example" aria-label="Input group example" aria-describedby="btnGroupAddon">-->
-<!--        </div>-->
-<!--    </div>-->
-
-<!--    <div class="btn-toolbar justify-content-between" role="toolbar" aria-label="Toolbar with button groups">-->
-<!--        <div class="btn-group btn-group-toggle" data-toggle="buttons">-->
-<!--            <label class="btn btn-secondary active">-->
-<!--                <input type="radio" name="options" id="option1" autocomplete="off" checked> Active-->
-<!--            </label>-->
-<!--            <label class="btn btn-secondary">-->
-<!--                <input type="radio" name="options" id="option2" autocomplete="off"> Radio-->
-<!--            </label>-->
-<!--            <label class="btn btn-secondary">-->
-<!--                <input type="radio" name="options" id="option3" autocomplete="off"> Radio-->
-<!--            </label>-->
-<!--        </div>-->
-
-<!--        <div class="input-group">-->
-<!--            <div class="input-group-prepend">-->
-<!--                <div class="input-group-text" id="btnGroupAddon2">@</div>-->
-<!--            </div>-->
-<!--            <div class="btn-group btn-group-toggle" data-toggle="buttons">-->
-<!--                <label class="btn btn-secondary active">-->
-<!--                    <input type="radio" name="options" id="option1" autocomplete="off" checked> Active-->
-<!--                </label>-->
-<!--                <label class="btn btn-secondary">-->
-<!--                    <input type="radio" name="options" id="option2" autocomplete="off"> Radio-->
-<!--                </label>-->
-<!--                <label class="btn btn-secondary">-->
-<!--                    <input type="radio" name="options" id="option3" autocomplete="off"> Radio-->
-<!--                </label>-->
-<!--            </div>-->
-
-<!--            <input type="text" class="form-control" placeholder="Input group example" aria-label="Input group example" aria-describedby="btnGroupAddon2">-->
-<!--        </div>-->
-<!--    </div>-->
 
 
 </body>
