--- a/views/test-space.ejs
+++ b/views/test-space.ejs
@@ -117,7 +117,7 @@
 </nav>
 
 <div class="complete-task">
-    <h2> logging ... </h2>
+    <h2> You are looking down 3D scene ! </h2>
 <!--    <button class="btn btn-primary complete-task" onclick="emitComplete()">Completed</button>-->
 </div>
 
