--- a/views/experiment.ejs
+++ b/views/experiment.ejs
@@ -41,7 +41,7 @@
 
         <a-assets id="assets">
             <a-asset-item id="plane-gltf" src="/objects/plane/Jet.gltf"></a-asset-item>
-            <a-mixin id="plane" gltf-model="#plane-gltf"></a-mixin>
+            <a-mixin id="airplane" gltf-model="#plane-gltf"></a-mixin>
             <a-mixin id="red" material ="color: red"></a-mixin>
             <a-mixin id="green" material ="color: green"></a-mixin>
             <a-mixin id="grey" material ="color: grey"></a-mixin>
